fix editor .file z-index add Editor::loadLast(), openRevision(), checkFile(), buildFiles() fix history/range file filter remove editor/index init(), options file and update, fix method calls fix editor.xml.Element.applyMove() applyStep fix editor.File.publish() path remove xsd.Schema.findChild() throw

--- a/storage/xml/editor/editor.less
+++ b/storage/xml/editor/editor.less
@@ -86,6 +86,12 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 0;
+    
+    &.visible
+    {
+      z-index: 1;
+    }
   }
   
   .window
